<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mofpy_demo</name>
  <version>0.0.0</version>
  <description>A demo script package for mofpy</description>
  <maintainer email="kzy.basect@gmail.com">Kazuya Oguma</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mofpy</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_core</depend>
  <depend>moveit_py_configs_utils</depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_servo</depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
